Fix: header scrollbar

--- a/src/theme/components/_components.header.scss
+++ b/src/theme/components/_components.header.scss
@@ -7,7 +7,7 @@
   justify-content: space-between;
   border: 1px solid #eeeeee;
   background: $em-clr-white;
-  z-index: -1;
+  z-index: 5;
 
   @media screen and (max-width: $em-sizes-sm) {
     height: 80px;
