--- a/src/theme/generics/_generics.page.scss
+++ b/src/theme/generics/_generics.page.scss
@@ -3,7 +3,6 @@
   width: 100%;
   padding: 100px 0 0 0;
   min-height: 100vh;
-  z-index: -2;
 
   @media screen and (max-width: $em-sizes-md) {
     padding: 100px 0 0 0;
